# autoAE

./: .dockerignore  .gitignore  .pylintrc  AEArgParser.py  Dockerfile  LICENSE  README.md  _Dockerfile  api.py  app.py  core.py  cred.py  db.py  main.py  main_buy.py  master.py  meta_data.py  mix.exs  planeConfig.py  planeConfigMiner.py  plotMap.py  pyproject.toml  recursive.py  routeAction.py  run_config.py  update_aircraft.py  update_session_token.py  update_world.py  userInput.py
.devcontainer/: Dockerfile  devcontainer.json
ae/: aeRequest.py  datastore.py  pageParser.py
api/: aeAPI.py  airlineAPI.py  authAPI.py
api/ae/: aircraftAPI.py  airlinesAPI.py  connectAPI.py  flightAPI.py
assets/: tailwind.config.js
config/: config.exs  dev.exs  prod.exs  runtime.exs  test.exs
lib/: autoAE.ex  autoAE_web.ex  auto_ae.ex  auto_ae_web.ex
lib/autoAE/: accounts.ex  application.ex  bots.ex  mailer.ex  release.ex  repo.ex
lib/autoAE_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
lib/auto_ae/: accounts.ex  application.ex  bots.ex  configurations.ex  mailer.ex  release.ex  repo.ex
lib/auto_ae_web/: endpoint.ex  gettext.ex  router.ex  telemetry.ex  user_auth.ex
models/: accounts.py  aircraft.py  configuration.py  db.py
priv/repo/: seeds.exs
service/: datastoreBase.py
service/auth/: user.py  users.py
static/css/: base.css
temp/: AEArgParser.py  api.py  core.py  master.py  planeConfig.py
templates/: aircraft.html  airline.html  airlines.html  base.html  flight.html
templates/auth/: aeConnect.html  login.html  (+1 more)
test/: test_helper.exs
(+124 files in other folders)
