[tool.poetry]
name = "autoae"
version = "0.1.0"
description = ""
authors = ["Julien Kellerhals <julien.kellerhals@gmail.com>"]
exclude = ["temp/**"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.0"
beautifulsoup4 = "^4.10.0"
pandas = "^1.4.1"
numpy = "^1.22.3"
Flask-Login = "^0.5.0"
Werkzeug = "2.2.3"
requests = "^2.27.1"
lxml = "^4.8.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
