[project]
name = "autoae"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "lxml>=5.3.0",
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "pony>=0.7.19",
    "pylint>=3.2.7",
    "requests>=2.32.3",
]
